# pqbackend

./: .env.example  .gitignore  README.md  call_api.py  config.py  main.py  pyproject.toml
api/: __init__.py  chat.py
core/: __init__.py  agents.py  models.py  ticker_store.py
data/: AAPL.csv  AMD.csv  IBM.csv  MSFT.csv  NFLX.csv  NVDA.csv  PYPL.csv  TSLA.csv  tickers.json  token_metrics.json
data/cache/: AAPL.csv  ABBV.csv  ABT.csv  ACN.csv  ADANIGREEN.NS.csv  ADANIPORTS.NS.csv  ADBE.csv  AGCO.csv  AIG.csv  AMD.csv  AMGN.csv  AMT.csv  AMZN.csv  APOLLOHOSP.NS.csv  ASIANPAINT.NS.csv  AVGO.csv  AXP.csv  BA.csv  BAC.csv  BAJAJ-AUTO.NS.csv  BAJFINANCE.NS.csv  BHARTIARTL.NS.csv  BK.csv  BKNG.csv  BLK.csv  BMY.csv  BPCL.NS.csv  C.csv  CAT.csv  CIPLA.NS.csv  CL.csv  CMCSA.csv  COF.csv  COP.csv  COST.csv  CRM.csv  CSCO.csv  CTVA.csv  CVS.csv  CVX.csv  (+103 more)
data/databases/: sentiment_data.db
scripts/: fetch_all_sentiment.py  fetch_finhub_sentiment.py  fetch_raw_stock_data.py  fetch_reddit_sentiment.py  fetch_sentiment_data.py  fetch_yfinance_sentiment.py  sentiment_common.py
tools/: __init__.py  growth.py  helper.py  technical_indicators.py  utils.py
tools/advisory/: __init__.py  backtester.py  data_handler.py  fee_calculator.py  portfolio_builder.py  risk_manager.py  tax_estimator.py
tools/advisory/strategies/: __init__.py  base_strategy.py  buy_and_hold.py  dollar_cost_avg.py  rsi_mean_reversion.py  sma_crossover.py
tools/sentiment/: __init__.py  db_utils.py  finhub.py  reddit.py  yfinance.py
tools/signals/: __init__.py  bands.py  correlation.py  earnings.py  fibonacci.py  ichimoku.py  macd.py  market_regime.py  obv.py  options_flow.py  rsi.py  sector.py  sma.py  utils.py  vix.py
utils/: __init__.py  agents.py  event_handler.py  event_processor.py  prompt.py  ticker_store.py  token_tracker.py
