[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.2",
    "aiohttp>=3.12.15",
    "ddgs>=9.5.5",
    "fastapi>=0.116.1",
    "google-genai>=1.35.0",
    "googlesearch-python>=1.3.0",
    "openai>=1.107.1",
    "pandas-stubs>=2.3.2.250827",
    "praw>=7.8.1",
    "pycountry>=24.6.1",
    "ruff>=0.13.0",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]


[tool.basedpyright]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false

reportAny = false
reportUnusedImport = false

reportMissingParameterType = false
reportMissingTypeArgument = false
reportArgumentType = false

# [tool.ruff]
# line-length = 88
# indent-width = 4
#
# [too.ruff.lint]
# ignore = ["E501", "F401"]
#
# [tool.ruff.format]
# quote-style = "single"
# indent-style = "space"
# skip-magic-trailing-comma = true

