[project]
name = "pqbackend"
version = "0.1.0"
description = "This is the backend server for PersonaQuant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.1.0",
    "aiohttp>=3.12.15",
    "asyncpraw>=7.8.1",
    "backtesting>=0.3.3",
    "ddgs>=9.5.5",
    "edgartools>=4.15.0",
    "fastapi>=0.116.1",
    "google-genai>=1.35.0",
    "googlesearch-python>=1.3.0",
    "jupyter>=1.1.1",
    "linkup-sdk>=0.6.0",
    "logfire>=4.13.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "openai>=1.107.1",
    "pandas-stubs>=2.3.2.250827",
    "polars>=1.34.0",
    "praw>=7.8.1",
    "psutil>=7.1.0",
    "pycountry>=24.6.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "ta-lib>=0.6.7",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126" # to be compatible with sm50, sm60 arch.
explicit = true

[tool.basedpyright]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportAny = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportArgumentType = false

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["E501", "E402"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true

